--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Gouri's Portfolio</h1>
     <h2>I am a Web Developer</h2>
     <hr/>
-    <a href="../2.4 Movie Ranking Project/index.html"><h2>Movie Ranking Project</h2></a>
+    <a href="./public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
     <br/>
     <img src="./assets/images/Screenshot 2024-11-14 223733.png" alt="Movie Ranking project"/>
-    <a href="../3.4 Birthday Invite Project/index.html"><h2>Birthday Invite Project</h2></a>
-    <img src="../4.3 HTML Porfolio Project/assets/images/Screenshot 2024-11-14 223907.png" alt="Birthday Invite Project"/>
+    <a href="./public/birthday-invite.html"><h2>Birthday Invite Project</h2></a>
+    <img src="./assets/images/Screenshot 2024-11-14 223907.png"/>
     <a href="./public/about.html" >About Me</a>     
     <a href="./public/contact.html">Contact Me</a>
 
